<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip"
        android:text="" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btPing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping" />

        <Button
            android:id="@+id/btDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down" />

        <Button
            android:id="@+id/btWhois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whois" />
    </LinearLayout>

    <EditText
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="match_parent"
        android:text="@string/output"
        android:editable="false" />

</LinearLayout>